0.6.0-SNAPSHOT: - (BETA) 1.17 and 1.18 support